[gd_scene load_steps=24 format=3 uid="uid://rlu4q3mbcp8g"]

[ext_resource type="Script" path="res://Scripts/item_pickup.gd" id="1_t3v84"]
[ext_resource type="PackedScene" uid="uid://cjs0tgfxxpnp0" path="res://Items/pickup_box.tscn" id="2_sdiw2"]
[ext_resource type="Texture2D" uid="uid://d4avmmrx8je70" path="res://Art/Sprites/Items/BigEnergy.png" id="3_21d1m"]
[ext_resource type="Texture2D" uid="uid://cymxpdrawbmw0" path="res://Art/Sprites/Items/BigHealth.png" id="3_tbe0d"]
[ext_resource type="Texture2D" uid="uid://di7b2ko8ukbpd" path="res://Art/Sprites/Items/SmallHealth.png" id="4_h2qvo"]
[ext_resource type="Texture2D" uid="uid://cdcjv8lh6tx3j" path="res://Art/Sprites/Items/ExtraLife.png" id="5_35ifo"]
[ext_resource type="Texture2D" uid="uid://cehrdxjhc147d" path="res://Art/Sprites/Items/SmallEnergy.png" id="5_xh0k4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cep1f"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha73x"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54kkx"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfyev"]
size = Vector2(8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2alep"]
atlas = ExtResource("3_21d1m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie2kn"]
atlas = ExtResource("3_21d1m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_21uia"]
atlas = ExtResource("3_tbe0d")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_edb7k"]
atlas = ExtResource("3_tbe0d")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsetg"]
atlas = ExtResource("5_35ifo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0sjp"]
atlas = ExtResource("5_xh0k4")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov88q"]
atlas = ExtResource("5_xh0k4")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5w64"]
atlas = ExtResource("4_h2qvo")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_20x7e"]
atlas = ExtResource("4_h2qvo")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_l6v1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2alep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie2kn")
}],
"loop": true,
"name": &"big_energy",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21uia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edb7k")
}],
"loop": true,
"name": &"big_health",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsetg")
}],
"loop": true,
"name": &"extra_life",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0sjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov88q")
}],
"loop": true,
"name": &"small_energy",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5w64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20x7e")
}],
"loop": true,
"name": &"small_health",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_w2m6j"]
resource_name = "flash"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0d7u"]
_data = {
"flash": SubResource("Animation_w2m6j")
}

[node name="ItemPickup" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1_t3v84")

[node name="CollisionShapeBig" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cep1f")
disabled = true

[node name="CollisionShapeSmall" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ha73x")
disabled = true

[node name="FlashTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="PickupBox" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_sdiw2")]
parent = NodePath("..")

[node name="CollisionShapeBig" type="CollisionShape2D" parent="PickupBox"]
shape = SubResource("RectangleShape2D_54kkx")
disabled = true

[node name="CollisionShapeSmall" type="CollisionShape2D" parent="PickupBox"]
shape = SubResource("RectangleShape2D_hfyev")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l6v1i")
animation = &"small_health"

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_e0d7u")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
